--- a/deployment/p2p_project.service
+++ b/deployment/p2p_project.service
@@ -8,6 +8,7 @@ Group=www-data
 WorkingDirectory=/home/ubuntu/deploy/apps/p2p_backend
 ExecStart=/home/ubuntu/deploy/apps/donikkah/donikkahenv/bin/daphne -b 0.0.0.0 -p 9000 p2p_project.asgi:application
 Restart=always
+RestartSec=5
 
 [Install]
 WantedBy=multi-user.target
