--- a/deployment/nginx_p2p.conf
+++ b/deployment/nginx_p2p.conf
@@ -8,6 +8,11 @@ server {
         alias /home/ubuntu/project1/backend_server/staticfiles/;
     }
 
+    location ~ \.(php|env|git|asp|jsp|xml)$ {
+        add_header Content-Type application/json;
+        return 200 '{"message":"thank you for visiting our website"}';
+    }
+
     location / {
         proxy_pass http://127.0.0.1:9000;
         proxy_http_version 1.1;
